--- a/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
@@ -77,15 +77,15 @@ HAW_carriers:0 "항공모함 지원"
 HAW_carriers_desc:0 "With our navy being modernised, time has come to focus on Aircraft Carriers. Carriers will be one of the major tools of defending our island from attack."
 
 ### Army Focuses ###
-HAW_army:0 "Hawai'ian National Guard"
+HAW_army:0 "하와이 국가 방위군"
 HAW_army_desc:0 "We shall form the Hawai'ian National Guard. While Hawai'i will not be an expansionist power we will train the people to better defend our islands from any threat that comes and so that Hawai'i remains free from all enemies."
-HAW_focus_on_planning:0 "Joint Chiefs of Staff"
+HAW_focus_on_planning:0 "합동 참모 본부"
 HAW_focus_on_planning_desc:0 "The main battle strategy of defending Hawai'i will be a joint chiefs of staff. They shall convene and plan out any and all defences for Hawai'i."
-HAW_superior_fire_power:0 "Superior Fire-Power"
+HAW_superior_fire_power:0 "화력 우세"
 HAW_superior_fire_power_desc:0 "Hawaii may be a set of individual islands but we have spirit and we shall fight hard. To that end we should rely on the doctrine of Superior Fire-power to defend our islands. We can make and import guns, artillery and ammunition but our lives are expensive. So let us save Hawai'ian lives through superior firepower."
 HAW_honolulu_rifles:0 "총기 현대화"
 HAW_honolulu_rifles_desc:0 "As we build up our army we should focus on modernising our guns and building up domestic firearm trade. This will help make sure that we have the best guns that we can have for our troops."
-HAW_military_factories:0 "Domestic Firearm Trade"
+HAW_military_factories:0 "국내 총기 무역"
 HAW_military_factories_desc:0 "To protect Hawai'i we should focus on building up our domestic firearm and military trade. With native Hawai'ian military industries we will be able to better defend our country from any invasion."
 HAW_strategic_information_services:0 "전략 정보 서비스"
 HAW_strategic_information_services_desc:0 "To protect the islands we should form the Strategic Information Services. They shall be our intelligence services and will help make sure that no saboteurs shall come to our islands."
@@ -150,9 +150,9 @@ HAW_japanese_tech_sharing_desc:0 "Now that we are full and respected members of 
 HAW_totalist_party:0 "HCP"
 HAW_totalist_party_long:0 "하와이 공산당"
 HAW_syndicalist_party:0 "PWU"
-HAW_syndicalist_party_long:0 "파인애플 노동다 연맹"
+HAW_syndicalist_party_long:0 "파인애플 노동자 연맹"
 HAW_radical_socialist_party:0 "CSH"
-HAW_radical_socialist_party_long:0 "Combined Syndicates of Hawai'i"
+HAW_radical_socialist_party_long:0 "하와이 노동 연맹"
 HAW_social_democrat_party:0 "진보당"
 HAW_social_democrat_party_long:0 "하와이 진보당"
 HAW_social_liberal_party:0 "국민자유당"
@@ -161,20 +161,20 @@ HAW_market_liberal_party:0 "개혁당"
 HAW_market_liberal_party_long:0 "하와이 개혁당"
 HAW_social_conservative_party:0 "국민당"
 HAW_social_conservative_party_long:0 "하와이 국민당"
-HAW_authoritarian_democrat_party:0 "Military Junta"
-HAW_authoritarian_democrat_party_long:0 "Military Junta"
+HAW_authoritarian_democrat_party:0 "군사 위원회"
+HAW_authoritarian_democrat_party_long:0 "군사 위원회"
 HAW_paternal_autocrat_party:0 "HFP"
 HAW_paternal_autocrat_party_long:0 "하와이 제일당"
 HAW_national_populist_party:0 "HFP"
 HAW_national_populist_party_long:0 "하와이 제일당"
 
 ### Ideas ###
-HAW_people_victory:0 "Revolutionary Hawai'i"
+HAW_people_victory:0 "하와이 혁명"
 HAW_socialist_educations:0 "사회주의적 교육"
 HAW_native_education:0 "푸나나 레오"
 HAW_hawaii_renassiance:0 "하와이의 저항"
-HAW_big_five_support:0 "Big Five Support"
-HAW_republic_education:0 "Republican Education"
+HAW_big_five_support:0 "빅 파이브 지원"
+HAW_republic_education:0 "공화주의적 교육"
 HAW_multi_cultural_hawaii:0 "하와이 다문화주의"
 HAW_syndicalist_democracy:0 "생디칼리즘 민주주의"
 HAW_agraian_reform:0 "토지 개혁"
@@ -200,22 +200,22 @@ HAW_commune_syndicalist:0 "하와이 코뮌"
 HAW_commune_social_democrat:0 "하와이 코뮌"
 
 ### Opinion Modifiers ###
-INDHAW_CAL:0 "Hawaii remain independent"
-INDHAW:0 "Hawaii remain independent"
-ALHAW_CAL:0 "Hawaii allies with us"
-ALHAW:0 "Hawaii allies with California"
-HAWENT:0 "Hawaii want to join the Entente"
-HAWENTYES:0 "Hawaii joins the Entente"
-HAWENTNO:0 "Hawaii don't join the Entente"
+INDHAW_CAL:0 "하와이가 독립으로 남다"
+INDHAW:0 "하와이가 독립으로 남다"
+ALHAW_CAL:0 "하와이가 우리와 동맹하다"
+ALHAW:0 "하와이가 캘리포니아와 동맹하다"
+HAWENT:0 "하와이가 협상국에 가입하려 하다"
+HAWENTYES:0 "하와이가 협상국에 가입하다"
+HAWENTNO:0 "하와이가 협상국에 가입하지 않다"
 ARRCSAAGG:0 "Arrested our men"
-CSADEMREF:0 "CSA demands reforms"
+CSADEMREF:0 "CSA가 개혁을 요구하다"
 HAW_friendship:0 "Hawaiian Friendship"
 HAW_hawaiian_trade:0 "Hawaiian business ties"
 
 
 
 ### Flags ###
-HAW_monarchy_restoration:0 "The Hawaiian Monarchy has been restored!"
+HAW_monarchy_restoration:0 "하와이 왕정이 복고될 것입니다!"
 HAW_new_republic:0 "A new Hawaiian republic has been proclaimed!"
 HAW_hawaiian_revolution:0 "The people have seized power in a revolution!"
 
@@ -294,7 +294,7 @@ hawaii.26.a:0 "War it is!"
 hawaii.26.b:0 "Peace Prevails"
 hawaii.27.t:0 "Friendly Greetings"
 hawaii.27.d:0 "While we were dealing with the syndicalists here in America, so to were the Hawaiians dealing with syndicalists. Thankfully just like in America, they have destroyed the syndicalist menace in Hawaii and have sent us friendly greetings and an offer to work with American business."
-hawaii.27.a:0 "Aloha Hawaii!"
+hawaii.27.a:0 "알로하 하와이!"
 
 hawaii.28.t:0 "하와이의 미래?"
 hawaii.28.d:0 "We are now cut off from America and for the first time in decades independent again. We must decide our fate. Some are clamouring for a return to the Monarchy of Hawai'i that was overthrown by the Americans in 1893. However others are claiming that the age of monarchy is dead and we should set up a republic inspired by the Americans. While union leaders working among the lower classes on the plantations and factories might try and make a move here."
@@ -330,7 +330,7 @@ hawaii.33.c:0 "국민자유당이 이긴다!"
 hawaii.33.e:0 "진보당이 이긴다!"
 hawaii.34.t:0 "공화국의 설립"
 hawaii.34.d:0 "At the ʻIolani Palace delegates from across Hawai'i have agreed to form a republic. All have taken an oath to protect and defend Hawai'i. Crowds have gathered outside to hear the proclamation of a republic cheering on. There will be much work to set up the republic of Hawai'i, not the least of an election will need to be held in the future."
-hawaii.34.a:0 "Long Live Hawai'i"
+hawaii.34.a:0 "하와이 만세"
 hawaii.35.t:0 "대통령 선거"
 hawaii.35.d:0 "Now with the constitution of the Republic of Hawai'i has been written, the first elections for the president of Hawai'i. The President of Hawai'i will be directly elected by the people of Hawai'i on universal suffrage for all men and women. Several parties are running for the first time, the Progressive Party, The National Liberal Party, The Reform Party and the National Party."
 hawaii.35.a:0 "국민당이 이긴다!"
@@ -357,7 +357,7 @@ hawaii.38.c:0 "국민자유당이 이긴다!"
 hawaii.38.e:0 "진보당이 이긴다!"
 hawaii.39.t:0 "하와이 혁명!"
 hawaii.39.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labour organises like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
-hawaii.39.a:0 "사슬을 깨부수어라!"
+hawaii.39.a:0 "사슬을 끊어라!"
 hawaii.40.t:0 "서기장 선거"
 hawaii.40.d:0 "While the revolution has implemented direct democracy on the different islands under our rule. However, there needs to be an election of the People's Council of Hawai'i that shall help guide the Hawaiian people particularly in foreign affairs. There are three large factions that have a chance at winning power, the social democrat Progressives, the Radical Socialist combined Syndicates of Hawai'i and the Syndicalist Pineapple workers Union."
 hawaii.40.a:0 "생디칼리스트가 이긴다"
@@ -384,10 +384,10 @@ hawaii.100.t:0 "하와이가 인터네셔널 가입을 요청하다"
 hawaii.100.d:0 "We have received a request from the Commune of Hawaii to join the International. A few years back this tiny land broke off from America and went through there own revolution. The strategic position of Hawaii makes them a valuable member for the International. However others were concerned about getting dragged into conflicts in that region."
 hawaii.100.a:0 "기쁘게 맞이해라"
 hawaii.100.b:0 "도발적인 행동은 피해야 한다."
-hawaii.101.t:0 "Hawai'i Joins the International"
+hawaii.101.t:0 "하와이가 인터네셔널에 가입하다"
 hawaii.101.d:0 "The International has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
 hawaii.101.a:0 "기쁘게 맞이해라"
-hawaii.102.t:0 "The International Refuses Hawai'i"
+hawaii.102.t:0 "인터네셔널이 하와이를 거부하다"
 hawaii.102.d:0 "The International has refused our request for an alliance, Hawai'i will stand alone."
 hawaii.102.a:0 "젠장"
 
@@ -395,10 +395,10 @@ hawaii.103.t:0 "하와이가 공영권 가입을 요청하다"
 hawaii.103.d:0 "Hawaii has requested entry into the Greater East Asia Co-Prosperity Sphere. The strategic position of Hawaii makes them a valuable member for the Co-Prosperity Sphere. There was concern that if Hawaii was added to the Co-Prosperity Sphere, it would change the balance of power in the Pacific."
 hawaii.103.a:0 "기쁘게 맞이해라"
 hawaii.103.b:0 "도발적인 행동은 피해야 한다."
-hawaii.104.t:0 "Hawai'i Joins Japan"
+hawaii.104.t:0 "하와이가 공영권에 가입하다"
 hawaii.104.d:0 "Japan has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
 hawaii.104.a:0 "기쁘게 맞이해라"
-hawaii.105.t:0 "Japan Refuses Hawai'i"
+hawaii.105.t:0 "일본이 하와이를 거부하다"
 hawaii.105.d:0 "Japan has refused our request for an alliance, Hawai'i will stand alone."
 hawaii.105.a:0 "젠장"
 
