--- a/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
@@ -1105,7 +1105,7 @@ fengtian.new.108.a:0 "Glorious!"
 
 fengtian.new.109.t:0 "산해관 봉기가 실패하다"
 fengtian.new.109.d:0 "Before it could ever truly begin, our uprising south of Shanhaiguan was detected and quickly overwhelmed by the local Qing garrison in a short but violent confrontation. While we may encounter some survivors as we push South, we will have no organised assistance from the other side of the Great Wall."
-fengtian.new.109.a:0 "Damn"
+fengtian.new.109.a:0 "젠장"
 
 fengtian.new.110.t:0 "The Gang of Three"
 fengtian.new.110.d:0 "As a loose coalition of fallen generals, governors, bureaucrats, and politicians exiled from the South by the collapse of the Beiyang Government and the return of the Qing, the Recovery League is widely acknowledged to be susceptible to corruption. Recent discoveries by police, however, suggest this is operating on a level so far unheard of. It seems as if a group of Recovery League members, who were made mayors of townships in Jilin for their experience with governing in the South, had in fact never been mayors at all; killing and replacing their namesakes, and through a complicated plot of deceit, fooling the authorities while eliminating any who might contradict them. \n\nThe web of lies, corruption, and murder necessary to sustain this falsehood stretches across the whole of the Northeast, and the damage dealt to the government's legitimacy is not inconsiderable."
