--- a/Kaiserreich Korean Translation/localisation/KR_Transamur_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Transamur_l_english.yml
@@ -371,7 +371,7 @@ tram.94.b:0 "It's too risky..."
 
 tram.95.t:0 "Russia has left us alone"
 tram.95.d:0 "Despite our best efforts to join Russia, negotiations has failed. This is the end..."
-tram.95.a:0 "Damn"
+tram.95.a:0 "젠장"
 
 tram.96.t:0 "Disaster"
 tram.96.d:0 "So-called "Soviet Government" have refused to return our lands. Moreover, they have declared war on us and eager to retake Vladivostok."
