--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -664,7 +664,7 @@ combinedsyndicates.202.a:0 "그들의 요구를 받아들인다."
 combinedsyndicates.202.b:0 "협상을 시도해보자."
 combinedsyndicates.202.c:0 "이 땅은 우리 것이다!"
 combinedsyndicates.203.t:0 "멕시코가 수락하다!"
-combinedsyndicates.203.d:0 "멕시코가 우리의 요구을 받아들였습니다. 미국 남서부는 미국 노동자들에게 돌아갈 것입니다.이는 멕시코와 미국 하이의 우정의 시작을 뜻합니다."
+combinedsyndicates.203.d:0 "멕시코가 우리의 요구을 받아들였습니다. 미국 남서부는 미국 노동자들에게 돌아갈 것입니다.이는 멕시코와 미국 간 우정의 시작을 뜻합니다."
 combinedsyndicates.203.a:0 "함께 번영하리라"
 combinedsyndicates.204.t:0 "멕시코가 우리 요구를 거절하다"
 combinedsyndicates.204.d:0 "멕시코는 우리의 요구를 반박했으며 심지어 협상조차도 거부했습니다. 대신 그들은 미국의 남서부가 멕시코 땅이며 우리가 이를 받아들여야 한다고 반격했습니다. 그들의 요구를 받아들이면 미국인들이 분노한다는 것은 분명합니다. 받아들이지 않으면 회담은 결렬되고 선택지로 전쟁만이 남을 것입니다."
