--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -310,10 +310,10 @@ TEX_lindbergh_party:0 "린드버그 파벌"
 TEX_lindbergh_party_long:0 "아메리카 우선당의 린드버그 파벌"
 TEX_smith_party:0 "스미스 파벌"
 TEX_smith_party_long:0 "아메리카 우선당의 스미스 파벌"
-TEX_coughlin_party:0 "코울린 신부 파벌"
-TEX_coughlin_party_long:0 "아메리카 우선당의 코울린 신부 파벌"
-TEX_kuhn_party:0 "페일리 파벌"
-TEX_kuhn_party_long:0 "아메리카 우선당의 페일리 파벌"
+TEX_coughlin_party:0 "커글린 신부 파벌"
+TEX_coughlin_party_long:0 "아메리카 우선당의 커글린 신부 파벌"
+TEX_kuhn_party:0 "펠리 파벌"
+TEX_kuhn_party_long:0 "아메리카 우선당의 펠리 파벌"
 
 ### Opinion Modifiers ###
 TEX_SYND_STOP_COMM:0 "미주 연합은 생디칼리즘을 저지하고 싶어한다"
@@ -347,21 +347,21 @@ unionstate.1.t:0 "연합주 건국"
 unionstate.1.d:0 "뉴 올리언스, 오늘 우리의 친애하는 지도자 휴이 롱이 국가의 생산적이고 사회적인 자원을 계획하고, 사회적 갈등을 종식하고, 평화와 질서를 유지하고, 모든 적을 제거할 새로운 연합의 출범을 선포한 장소입니다. 이 대담한 새로운 계획을 주도할 사람은..."
 unionstate.1.a:0 "찰스 린드버그 - 대중들에게 잘 알려진 유명인"
 unionstate.1.b:0 "제럴드 L.K. 스미스가 경제와 정치 체제를 개편할 것이다."
-unionstate.1.c:0 "찰스 코울린 신부가 가부장적 연합주를 장려할 것이다."
+unionstate.1.c:0 "찰스 커글린 신부가 가부장적 연합주를 장려할 것이다."
 unionstate.1.e:0 "윌리엄 펠리가 내란 음모자들과 공화국의 적들을 뿌리 뽑을 것이다!"
 unionstate.2.t:0 "우리가 통치할 곳은 어디입니까?"
 unionstate.2.d:0 "내전의 종식과 함께, 우리는 우리의 수도를 어디에 둘 지를 결정해야 합니다. 워싱턴으로 다시 복귀할까요?"
-unionstate.2.a:0 "워싱턴은 부패한 도시이다."
+unionstate.2.a:0 "워싱턴은 부패한 도시다."
 unionstate.2.b:0 "워싱턴은 부패로부터 정화되었다."
 unionstate.3.t:0 "조국의 재탄생"
 unionstate.3.d:0 "After the devastation of the American Civil War, [Root.GetLeader] and the America First Party were hoping to rebuild America stronger than before. The Syndicalist threat was still present around the world and a strong America was needed to meet that threat. Due to the war there was a significant labour shortage and tough decisions would be needed to get the country back on its feet."
 unionstate.3.a:0 "Conscript the labour required"
 unionstate.3.b:0 "The corporations can handle this"
 
-unionstate.571.t:0 "The American Union State Youth"
-unionstate.571.d:0 "William Pelley has submitted a plan to start a Youth Foundation in the AUS and is looking for approval. The Foundation would show Adolescents the purpose of America First and to teach them discipline above all things and loyalty to the New State. We're in need of new recruits, and Pelley's Youth Foundation may be part of the solution."
-unionstate.571.a:0 "Let Pelley have his Daycare"
-unionstate.571.b:0 "We don't feel comfortable about this..."
+unionstate.571.t:0 "미주 연합 청년단"
+unionstate.571.d:0 "윌리엄 펠리는 미주 연합 청년단을 발족할 계획을 제안했으며, 승인을 기다리고 있습니다. 청년단은 소년들에게 미국 제일주의의 대의를 보여줄 것이며, 훈육과 함께 무엇보다도 중요한 새 국가에 대한 충성심을 가르칠 것입니다. 우리는 신병이 필요하며, 펠리의 청년단은 이 문제에 대한 해답이 될 것입니다."
+unionstate.571.a:0 "펠리에게 맡기자"
+unionstate.571.b:0 "약간 거북한 느낌이 드는데..."
 
 unionstate.6.t:0 "CSA가 프랑스로 피신했습니다"
 unionstate.6.d:0 "Reed and the CSA leadership were forced to flee to the Commune of France to escape the wrath of the victorious American Union State."
@@ -388,7 +388,7 @@ unionstate.14.b:0 "추방하라"
 
 
 unionstate.11.t:0 "인두세"
-unionstate.11.d:0 "Long wished to abolish the Poll Tax to reduce the racial tensions of the south. His proposal was met with immediate condemnation by the extremists within his party. Pelley and others denounced Long as trying to destroy the sacred institutions of the South. Long retorted that racist and sacred were two different things and rallied the people against what he saw as an evil institution."
+unionstate.11.d:0 "롱은 남부의 인종적 긴장을 완화하기 위해 인두세 폐지를 원했습니다. 그의 제안은 즉각 당 내의 극단주의자들의 규탄을 맞이했습니다. 펠리 패거리들은 롱이 남부의 신성한 제도를 파괴하려 한다고 비난했습니다. 롱은 인종주의는 결코 신성하지 않으며, 이 사악한 제도를 철폐하기 위해 대중 집회를 열었습니다."
 unionstate.11.a:0 "그딴 건 없애버려라."
 unionstate.11.b:0 "아니, 당의 유지를 위해 필요하다."
 unionstate.16.t:0 "기나긴 밤"
