--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -1222,3 +1222,28 @@ amcivwar.500.t:0 "노동 조합의 운명"
 amcivwar.500.d:0 "내전의 종식에 따라, 노동 조합의 운명을 결정할 시간이 왔습니다. 대부분의 노동 조합원들은 아메리카 노동 연맹의 일원이였고 내전에서 아메리카 노동 연맹에 편에 서서 무기를 들었습니다. 더 많은 보수파는 우리가 조합을 금지하길 원하지만 진보파는 새로운 미합 중국을 재건하기 위해 그들에게 관용을 베풀것을 지지하고 있습니다.."
 amcivwar.500.a:0 "조합을 승인하라"
 amcivwar.500.b:0 "조합을 금지시켜라"
+
+amcivwar.600.t:0 "The [Root.GetAdjective] Collapse"
+amcivwar.600.d:0 "Our forces cannot hold out against the enemy any longer - already our troops are beginning to desert en masse, and the ripple of disorganization is working its way up the ranks. [Root.GetNameDefCap] is near the point of defeat, and we must admit that it is so."
+amcivwar.600.a:0 "Thus it ends here..."
+amcivwar.601.t:0 "The Federal Collapse"
+amcivwar.601.d.lives:0 "It appears that the Federal government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Federal leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
+amcivwar.601.d.falls:0 "News traveled quickly today that the Federal government has collapsed in the American Civil War. What land was formerly under its control has been swallowed up by the other American factions, and the last remaining Federal leaders were reported to have met with generals from [annex_to.GetNameDef] in order to negotiate the terms of their complete surrender. The whereabouts of [USA.GetLeader] is unknown, but he is also believed to have already been placed under arrest. The future of the United States, it appears, rests in the hands of the factions which tore it down."
+amcivwar.601.a:0 "A necessary step for the revolution"
+amcivwar.601.b:0 "We'd hoped it wouldn't come to this..."
+amcivwar.601.c:0 "They got what they deserved"
+amcivwar.601.e:0 "Shocking!"
+amcivwar.603.t:0 "Collapse of the American Syndicates"
+amcivwar.603.d.lives:0 "It appears that the Syndicate government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Syndicate leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
+amcivwar.603.d.falls:0 "News traveled quickly today that the [CSA.GetNameDef] government has collapsed in the American Civil War. What land was formerly under its control has been swallowed up by the other American factions, and the last remaining Syndicate leaders were reported to have met with generals from [annex_to.GetNameDef] in order to negotiate the terms of their complete surrender. The whereabouts of [CSA.GetLeader] is unknown, but he is believed to have already been placed under arrest. The threat that the United States will fall to syndicalism has, it appears, come to an end."
+amcivwar.603.a:0 "It's about damned time"
+amcivwar.603.b:0 "Well that's good news, at least"
+amcivwar.603.c:0 "Let their revolution burn in hell"
+amcivwar.603.e:0 "Interesting"
+amcivwar.605.t:0 "Collapse of the Union"
+amcivwar.605.d.lives:0 "It appears that the Union government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Union leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
+amcivwar.605.d.falls:0 "News traveled quickly today that the Union government has collapsed in the American Civil War. What land was formerly under its control has been swallowed up by the other American factions, and the last remaining Union leaders were reported to have met with generals from [annex_to.GetNameDef] in order to negotiate the terms of their complete surrender. The whereabouts of [TEX.GetLeader] is unknown, but he is believed to have already been placed under arrest. The threat that the United States will fall sway to [TEX.GetNameDef]'s radical ideology, it appears, come to an end."
+amcivwar.605.a:0 "As it should be"
+amcivwar.605.b:0 "Well that's good news, at least"
+amcivwar.605.c:0 "They deserve everything they get"
+amcivwar.605.e:0 "Interesting"
