--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -3,7 +3,7 @@ l_english:
 ADU_totalist:0 "안달루시아"
 ADU_totalist_ADJ:0 "안달루시아"
 ADU_totalist_DEF:0 "안달루시아"
-ADU_syndicalist:0 "안달루시아"d
+ADU_syndicalist:0 "안달루시아"
 ADU_syndicalist_ADJ:0 "안달루시아"
 ADU_syndicalist_DEF:0 "안달루시아"
 ADU_radical_socialist:0 "안달루시아"
