--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -138,8 +138,8 @@ AUS_eco_council_desc:0 "오스트리아 경제의 부진한 상태에 대해 논
 AUS_skoda:0 "스코다"
 AUS_skoda_desc:0 "세계대전 기간 동안 프라하의 서쪽에 있는 스코다 사는 가장 큰 군수 제조사였지만 독일 산업의 압도적인 힘으로 어려움에 빠졌습니다. 독일이 검은 월요일(Black Monday)의 중심에 휩싸여 흔들리는 사이, 스코다 사에 대한 보조금은 우리 경제를 복구하는 큰 발판이 될것 입니다."
 
-AUS_daimler:0 "Austro Daimler"
-AUS_daimler_desc:0 "Austro Daimler 회사는 우리의 전쟁 수행을 위해 많은 장갑차 및 엔진을 제조했습니다. 독일 자동차와 엔진은 지난 수십 년 동안 시장에 넘쳐 났지만, 포르쉐는 파산 직전에 시달리고 메르세데스-벤츠는 이를 따르고 있습니다. 우리 자동차 산업에 새로운 생명을 불어 넣을 시간입니다."
+AUS_daimler:0 "오스트로 다임러"
+AUS_daimler_desc:0 "오스트로 다임러 회사는 우리의 전쟁 수행을 위해 많은 장갑차 및 엔진을 제조했습니다. 독일 자동차와 엔진은 지난 수십 년 동안 시장에 넘쳐 났지만, 포르쉐는 파산 직전에 시달리고 메르세데스-벤츠는 이를 따르고 있습니다. 우리 자동차 산업에 새로운 생명을 불어 넣을 시간입니다."
 
 AUS_vienna_circle_1:0 "빈 학파를 공공 단체로 만들다."
 AUS_vienna_circle_1_desc:0 "빈 학파는 과학과 철학 연구의 중심에있는 뛰어난 수학자, 철학자, 자연 과학자들과 비엔나 대학의 가장 뛰어난 지성의 집합체입니다. 우리는 정부 기금을 그들에게 제공 할 것이지만, 그들의 일을 새롭고 좀 더 실용적인 분야로 옮길 것입니다."
