--- a/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
@@ -1,20 +1,20 @@
 l_english:
 
 ### Ideas ###
-BOL_nativetroops:0 "Natives Enlistment Issues"
-BOL_nativetroops_desc:0 "The indigenous people of Bolivia are disillusioned with our government. Thus, few enlist in our armed forces. Whether through force, or through reconciliation, we must adress this issue."
-BOL_PLOWSHARE:0 "Swords Into Plowshares"
-BOL_PLOWSHARE_desc:0 "Our many war veterans and former revolutionaries have been given work and renewed purpose."
-BOL_FARM:0 "Collective Farms"
-BOL_FARM_desc:0 "The landlords who for so long held our nation hostage are defeated, and the people of Bolivia are the masters of the land now, for a better future!"
-BOL_JUST:0 "A Just Society"
-BOL_JUST_desc:0 "For centuries the natives of Bolivia were treated as second class citizens. Now, we have affirmed the humanity of our native populace, and the wounds of history's injustices have begun to heal."
-BOL_PRIVA:0 "Privatisation Disaster"
-BOL_PRIVA_desc:0 "The rapid pace of our privatisation efforts have had disastrous consequences, turning countless former state employees jobless overnight."
-BOL_tankimport:0 "Tank Imports"
-BOL_tankimport_desc:0 "Bolivia was the first South American nation to use tanks in combat. With help from our allies aroad, we have begun to accumulate an even greater quantity of armoured vehicles."
-BOL_customs_union:0 "Andean Common Market"
-BOL_customs_union_desc:0 "Bolivia and Peru now share a common market! Only good may come of this"
+BOL_nativetroops:0 "원주민 모병 문제"
+BOL_nativetroops_desc:0 "볼리비아의 원주민들은 우리 정부에 환멸을 느끼고 있습니다. 따라서, 우리 군대에 입대하는 사람은 거의 없습니다. 무력을 통해서든, 화해를 통해서든, 우리는 이 문제를 해결해야 한다."
+BOL_PLOWSHARE:0 "칼을 쟁기로"
+BOL_PLOWSHARE_desc:0 "우리의 많은 참전 용사들과 이전의 혁명가들은 일자리를 얻었고 새로운 목적을 갖게 되었습니다."
+BOL_FARM:0 "집단 농장"
+BOL_FARM_desc:0 "오랫동안 우리 나라를 인질로 잡아 온 지주들은 패배했으며, 현재 볼리비아 국민들은 더 나은 미래를 위해 그 땅의 주인이 되었습니다!"
+BOL_JUST:0 "정의로운 사회"
+BOL_JUST_desc:0 "수세기 동안 볼리비아 원주민들은 2등 시민으로 대접 받았습니다. 이제 우리는 우리 민족의 인간성을 확인했고, 부당한 역사의 상처가 치유되기 시작했습니다."
+BOL_PRIVA:0 "민영화 재난"
+BOL_PRIVA_desc:0 "우리의 민영화 노력은 빠른 속도로 진행되면서 수많은 전직 공무원들을 하룻밤 사이에 실직 상태로 만들고 있습니다. 이는 비참한 결과를 가져왔습니다."
+BOL_tankimport:0 "전차 수입"
+BOL_tankimport_desc:0 "볼리비아는 전투에서 전차를 사용한 최초의 남미 국가입니다. 아군의 도움으로 우리는 훨씬 더 많은 장갑차를 모으기 시작했다."
+BOL_customs_union:0 "안데스 공동 시장"
+BOL_customs_union_desc:0 "볼리비아와 페루는 이제 공동 시장을 가집니다! 오직 좋은 결과만이 나올 것입니다."
 
 ### Focuses ###
 BOL_trap:0 "Strategic Long Term Planning"
@@ -145,18 +145,18 @@ BOL_totalist_party:0 "MRT"
 BOL_totalist_party_long:0 "전체혁명주의당"
 
 ### Events ###
-bol.1.t:0 "The Possibilities of Privatisation"
-bol.1.d:0 "The economy is a wreck and has been since 1905. There is nothing we can do to change this, it is a fact of Bolivian life. Although, we may be able to gain profit for ourselves if we privatized many industries like water, energy, transportation and electricity. This may make life harder for the people, but we'll profit."
-bol.1.a:0 "If it doesn't turn a quick buck, put it up for sale!"
-bol.1.b:0 "This is a betrayal of the Bolivian people!"
-bol.2.t:0 "Unemployment and The Class Division in Bolivia"
-bol.2.d:0 "Since the privatisation of virtually every industry in Bolivia, the middle class has been destroyed and now everyone is either as poor as a native or a member of the mega-rich. There are little to no jobs left in Bolivia, and the jobs that still exist don't provide acceptable wages or benefits."
-bol.2.a:0 "There is nothing we can do"
+bol.1.t:0 "민영화 가능성"
+bol.1.d:0 "경제는 1905년부터 붕괴되어 왔습니다. 이를 바꾸기 위해 우리가 할 수 있는 것은 아무것도 없습니다. 이것이 볼리비아인 삶의 사실이다. 하지만, 우리가 수도, 에너지, 교통 그리고 전기와 같은 많은 산업들을 민영화한다면 우리는 스스로 이익을 얻을 수 있을 것입니다. 민영화가 사람들의 삶을 힘들게 할 수도 있지만, 우리는 이익을 얻을 것입니다."
+bol.1.a:0 "만약 돈이 되지 않는다면, 팔아버려라!"
+bol.1.b:0 "이는 볼리비아 인민들에 대한 배신이다!"
+bol.2.t:0 "볼리비아의 실업과 계급 구분"
+bol.2.d:0 "볼리비아에서 사실상 모든 산업이 민영화된 이후 중산층은 몰락하였으며 이제 모든 사람들이 원주민들만큼 가난해지거나 초갑부의 일원이 되었습니다. 볼리비아에 직장은 거의 남아 있지 않고, 여전히 존재하는 직장들은 괜찮은 임금이나 혜택을 주지 않습니다."
+bol.2.a:0 "우리가 할 수 있는 일은 아무 것도 없다"
 bol.3.t:0 "Aftermath of the Platine War"
 bol.3.d:0 "Since her formation Bolivia has not fared well in terms of her foreign policy, suffering hurtful losses. A border conflict with Chile led to the 'Saltpetre War' (1879 – 1883) which Bolivia lost despite an alliance with Peru, which ended with the nation having to cede the coastal province of Antofagasta, losing its access to the sea. In 1903 Brazil and Bolivia signed the Treaty of P?troplis, ceding the important rubber producing province Acre to Brazil. In 1932, tensions with Paraguay over the Gran Chaco region touched off what would later come to be known as the 'Great South American War'. Initially, Bolivia was successful against the Paraguayans had quickly overran the country, unfortunately though, the Bolivian occupation of Paraguay prompted Argentinean intervention in 1933, and a in a quick campaign Argentinean troops quickly liberated Paraguay and settled in for the winter.In 1934, Argentina renewed their offensive and scored several great victories against the Bolivian forces, and Bolivia seemed totally defeated. However, in another twist of the war, their hope was rekindled, as Brazil chose this time to intervene on their side. Unfortunately however the Brazilians focused the thrust of their offensives towards the La Plata River, leaving the Bolivians to look to their own defences, and this error of judgement lead to a humiliating final defeat of Bolivia at the hands of Argentina in late 1934. In the resulting peace, Bolivia was forced to accept the independence of Paraguay and relinquish their claims on the Gran Chaco region. After another short campaign by Argentinean forces Brazil was defeated in 1935, and in the resulting peace Uruguay and Paraguay were 'federated' with Argentina to create the Union of La Plata.In 1936 Bolivia stands at a crossroads, on one hand she is burning with a passion for revenge against 'La Plata', but on the other hand, she is wary of becoming too closely aligned with Brazil. However, with the government in La Plata beginning to assert claims over parts of Bolivia relations are becoming even further strained and closer ties with Brazil may well be unavoidable. Whatever the situation, Bolivia will have to play her cards wisely, for the moment of final decision will come soon…"
 #"Treaty of P?troplis" what???
 bol.3.a:0 "Those Argentinians will get what's coming for them!"
-bol.4.t:0 "Civil War breaks out in La Paz"
+bol.4.t:0 "라파스에서 내전이 일어나다"
 bol.4.d:0 "The revolutionary mob have stormed the capital city and have been battling with the Presidential Guard. Future of our country is at stake !"
 bol.4.a:0 "The Presidential Guard is defeated and the Regime is Toppled!"
 bol.4.b:0 "The people are driven back into the hillsides where they belong!"
