--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -1227,21 +1227,21 @@ amcivwar.600.t:0 "[Root.GetAdjective]이(가) 무너지다"
 amcivwar.600.d:0 "우리 군은 더이상 적에 대항할 수 없습니다. 이미 우리 군은 대거 사라지기 시작했으며, 혼란의 파급 효과는 점점 커져가고 있습니다. [Root.GetNameDefCap]은(는) 거의 패배하기 직전이며, 우리는 이를 인정해야 합니다."
 amcivwar.600.a:0 "그렇다면 여기서 끝나겠군..."
 amcivwar.601.t:0 "합중국의 붕괴"
-amcivwar.601.d.lives:0 "합중국 정부는 미국 내전에서 거의 막바지 단계에 있는 것으로 보입니다. 이미 [annex_to.GetNameDef]와(과) 다른 국가들이 그들의 땅을 대부분 흡수하였으며, 남은 것은 군대의 마지막 잔재일 뿐이며, 지금은 모두 사기가 떨어지고 있습니다. 남은 것은 군대의 마지막 잔재들 뿐인데, 사기가 떨어지고 있으며 대량 탈영으로 고통 받고 있지만, 기적이 그들을 구할 수도 있다는 희망을 품고 저항하고 있습니다. 일부 합중국 지도자들은 불가피한 완전 항복 조건을 협상하기 위해 이미 [annex_to.GetAdjective] 장군들을 만났습니다."
+amcivwar.601.d.lives:0 "합중국 정부는 미국 내전에서 거의 막바지 단계에 있는 것으로 보입니다. 이미 [annex_to.GetNameDef]와(과) 다른 국가들이 그들의 땅을 대부분 흡수하였습니다. 남은 것은 군대의 마지막 잔재일 뿐이며, 지금은 모두 사기가 떨어지고 있습니다. 남은 것은 군대의 마지막 잔재들 뿐인데, 사기가 떨어지고 있으며 대량 탈영으로 고통 받고 있지만, 기적이 그들을 구할 수도 있다는 희망을 품고 저항하고 있습니다. 일부 합중국 지도자들은 불가피한 완전 항복 조건을 협상하기 위해 이미 [annex_to.GetAdjective] 장군들을 만났습니다."
 amcivwar.601.d.falls:0 "오늘 연방 정부가 미국 내전 중에 붕괴했다는 소식이 급속도로 퍼져나가고 있습니다. 이미 다른 국가들이 그 정부가 이전에 장악하고 있던 땅을 흡수하였으며, 마지막으로 남아 있는 합중국 지도자들은 항복 조건을 협상하기 위해 [annex_to.GetNameDef] 장군들과 만난 것으로 알려졌습니다. [USA.GetLeader]의 행방은 알려지지 않았지만 이미 구속된 것으로 보입니다. 미국의 미래는 미국을 분열시킨 다른 국가들의 손에 달려있습니다."
 amcivwar.601.a:0 "혁명을 위해 필요한 조치다"
 amcivwar.601.b:0 "이렇게 되지 않길 바랬는데…"
 amcivwar.601.c:0 "그들은 무너질 만 했다"
 amcivwar.601.e:0 "놀랍군!"
 amcivwar.603.t:0 "노동 연맹의 붕괴"
-amcivwar.603.d.lives:0 "연맹 정부는 미국 내전에서 거의 막바지 단계에 있는 것으로 보입니다. 이미 [annex_to.GetNameDef]와(과) 다른 국가들이 그들의 땅을 대부분 흡수하였으며, 남은 것은 군대의 마지막 잔재일 뿐이며, 지금은 모두 사기가 떨어지고 있습니다. 남은 것은 군대의 마지막 잔재들 뿐인데, 사기가 떨어지고 있으며 대량 탈영으로 고통 받고 있지만, 기적이 그들을 구할 수도 있다는 희망을 품고 저항하고 있습니다. 일부 연맹 지도자들은 불가피한 완전 항복 조건을 협상하기 위해 이미 [annex_to.GetAdjective] 장군들을 만났습니다."
+amcivwar.603.d.lives:0 "연맹 정부는 미국 내전에서 거의 막바지 단계에 있는 것으로 보입니다. 이미 [annex_to.GetNameDef]와(과) 다른 국가들이 그들의 땅을 대부분 흡수하였습니다. 남은 것은 군대의 마지막 잔재일 뿐이며, 지금은 모두 사기가 떨어지고 있습니다. 남은 것은 군대의 마지막 잔재들 뿐인데, 사기가 떨어지고 있으며 대량 탈영으로 고통 받고 있지만, 기적이 그들을 구할 수도 있다는 희망을 품고 저항하고 있습니다. 일부 연맹 지도자들은 불가피한 완전 항복 조건을 협상하기 위해 이미 [annex_to.GetAdjective] 장군들을 만났습니다."
 amcivwar.603.d.falls:0 "오늘 [CSA.GetNameDef] 정부가 미국 내전 중에 붕괴했다는 소식이 급속도로 퍼져나가고 있습니다. 이미 다른 국가들이 그 정부가 이전에 장악하고 있던 땅을 흡수하였으며, 마지막으로 남아 있는 연맹 지도자들은 항복 조건을 협상하기 위해 [annex_to.GetNameDef] 장군들과 만난 것으로 알려졌습니다. [CSA.GetLeader]의 행방은 알려지지 않았지만 이미 구속된 것으로 보입니다. 미국이 생디칼리즘에 빠질 위협은 끝난 것 같습니다."
 amcivwar.603.a:0 "이제 때가 됐다."
 amcivwar.603.b:0 "적어도 좋은 소식이긴 하군."
 amcivwar.603.c:0 "지옥에서 혁명을 하도록 내버려 두어라."
 amcivwar.603.e:0 "흥미롭군"
 amcivwar.605.t:0 "연방의 붕괴"
-amcivwar.605.d.lives:0 "연방 정부는 미국 내전에서 거의 막바지 단계에 있는 것으로 보입니다. 이미 [annex_to.GetNameDef]와(과) 다른 국가들이 그들의 땅을 대부분 흡수하였으며, 남은 것은 군대의 마지막 잔재일 뿐이며, 지금은 모두 사기가 떨어지고 있습니다. 남은 것은 군대의 마지막 잔재들 뿐인데, 사기가 떨어지고 있으며 대량 탈영으로 고통 받고 있지만, 기적이 그들을 구할 수도 있다는 희망을 품고 저항하고 있습니다. 일부 연방 지도자들은 불가피한 완전 항복 조건을 협상하기 위해 이미 [annex_to.GetAdjective] 장군들을 만났습니다."
+amcivwar.605.d.lives:0 "연방 정부는 미국 내전에서 거의 막바지 단계에 있는 것으로 보입니다. 이미 [annex_to.GetNameDef]와(과) 다른 국가들이 그들의 땅을 대부분 흡수하였습니다. 남은 것은 군대의 마지막 잔재일 뿐이며, 지금은 모두 사기가 떨어지고 있습니다. 남은 것은 군대의 마지막 잔재들 뿐인데, 사기가 떨어지고 있으며 대량 탈영으로 고통 받고 있지만, 기적이 그들을 구할 수도 있다는 희망을 품고 저항하고 있습니다. 일부 연방 지도자들은 불가피한 완전 항복 조건을 협상하기 위해 이미 [annex_to.GetAdjective] 장군들을 만났습니다."
 amcivwar.605.d.falls:0 "오늘 연방 정부가 미국 내전 중에 붕괴했다는 소식이 급속도로 퍼져나가고 있습니다. 이미 다른 국가들이 그 정부가 이전에 장악하고 있던 땅을 흡수하였으며, 마지막으로 남아 있는 연방 지도자들은 항복 조건을 협상하기 위해 [annex_to.GetNameDef] 장군들과 만난 것으로 알려졌습니다. [TEX.GetLeader]의 행방은 알려지지 않았지만 이미 구속된 것으로 보입니다. 미국이 [TEX.GetNameDef]의 급진 사상에 빠질 위협은 끝난 것 같습니다."
 amcivwar.605.a:0 "원래 그랬어야 했다."
 amcivwar.605.b:0 "적어도 좋은 소식이긴 하군."
