--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -891,7 +891,7 @@ holst.13.a:0 "The police did well in rounding up the troublemakers so quickly."
 holst.13.b:0 "These people are innocent, and must be released at once!"
 
 holel.1.t:0 "네덜란드 선거"
-holel.1.d:0 "암스테르담과 즈볼러에서의 사건이 사람들의 기억 속에 생생하게 남아있는 가운데 올해 총선을 치열하게 치러질 것입니다. 경찰은 잠재적인 말썽꾼을 막기 위해 최선을 다하고 있습니다.\n\n거대 세력인 CNA는 현재 의회에서 가장 강력한 위치에 있지만, 기둥은 무너지기 직전이며 좌우 가릴 것 없이 지지자들이 빠져나가는 것을 볼 때, 투표함이 열렸을 때 CNA가 이길 지는 의문입니다. 하지만 좌익 자유주의자와 온건 사회민주주의자의 조합인 Lijst Links는 운이 좋다면 CNA의 자리를 뺐을 수 있을 정도로 충분히 넓은 지지 기반을 가지고 있습니다. 그리고 급진주의의 유령은 항상 진영 내에서 기다리고 있습니다..."
+holel.1.d:0 "암스테르담과 즈볼러에서의 사건이 사람들의 기억 속에 생생하게 남아있는 가운데 올해 총선은 치열하게 치러질 것입니다. 경찰은 잠재적인 말썽꾼을 막기 위해 최선을 다하고 있습니다.\n\n거대 세력인 CNA는 현재 의회에서 가장 강력한 위치에 있지만, 기둥은 무너지기 직전이며 좌우 가릴 것 없이 지지자들이 빠져나가는 것을 볼 때, 투표함이 열렸을 때 CNA가 이길 지는 의문입니다. 하지만 좌익 자유주의자와 온건 사회민주주의자의 조합인 Lijst Links는 운이 좋다면 CNA의 자리를 뺐을 수 있을 정도로 충분히 넓은 지지 기반을 가지고 있습니다. 그리고 급진주의의 유령은 항상 진영 내에서 기다리고 있습니다..."
 holel.1.a:0 "급진사회주의 RSAP가 승리를 달성했다!"
 
 holel.1.b:0 "Lijst Links가 거대 세력인 CNA를 몰아냈다!"
