--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -15,7 +15,7 @@ TEX_infantry_tanks:0 "보병 전차"
 TEX_infantry_tanks_desc:0 "전차를 효율적으로 사용하기 위해서는 보병과 같이 움직여야 합니다. 보병은 승리를 얻기 위해서 기갑 부대을 전력으로 지원하여야 합니다. 기갑과 보병의 팀워크가 유지되는 한, 승리는 언제나 우리의 것입니다."
 TEX_superior_fire_power:0 "콜린스의 제병 합동"
 TEX_superior_fire_power_desc:0 "라이트닝 조라는 별명으로 익히 유명한 조지프 로튼 콜린스는 전투 승리의 핵심은 제병군과 화력 우세에 있다고 제안했습니다. 그의 계획을 채택하는 것은 분명 이점이 있을 뿐만 아니라, 그가 승리를 거머쥘 수 있도록 지원을 다한다는 의미를 갖기도 합니다."
-TEX_praise_the_lord:0 "주을 찬양하고"
+TEX_praise_the_lord:0 "주를 찬양하고"
 TEX_praise_the_lord_desc:0 "제병군 계획을 실행하기 위해서는 최고의 병기들을 확보할 필요가 있습니다. 우리 병사들은 최상의 무기들이 필요합니다."
 TEX_pass_the_ammunition:0 "탄약을 전달하라"
 TEX_pass_the_ammunition_desc:0 "최고의 소총과 보병 장비들이 필요한 것처럼, 최고의 야포도 필요합니다. 당장 야포 생산에 돌입합시다. 주를 찬양하기 이전에 먼저 미국의 적들에 승리를 거둬야 한다는 것을 잊으면 안됩니다!"
@@ -39,37 +39,37 @@ TEX_carriers_desc:0 "존 S. 매케인은 항공모함에 집중하는 해군 계
 TEX_carrier_planes:0 "함재기 제작"
 TEX_carrier_planes_desc:0 "항공모함의 가치는 운반하는 함재기에 달려있습니다. 항공모함에 결코 바닥나지 않는 최신예 함재기를 탑재합시다."
 TEX_new_aircraft_carriers:0 "새로운 항공모함"
-TEX_new_aircraft_carriers_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Aircraft Carriers better in all regards. To that end let us focus on keeping our navy up to date."
+TEX_new_aircraft_carriers_desc:0 "미국 해군이 전세계의 선망이 되기 위해서는 모든 면에서 뛰어난 항공모함을 건조하기 위한 새로운 방법을 비웃거나 무시해서는 안됩니다. 해군이 최신 모함 건조에 집중하도록 합시다."
 TEX_escorts:0 "해군 호위"
-TEX_escorts_desc:0 "Regardless of which naval plan that we choose we should make sure that our convoys are protected where ever they go. To that end let us invest in escorts for them."
+TEX_escorts_desc:0 "우리가 선택한 해군 계획과는 관계없이 수송선들은 어디를 가든 보호받아야 합니다. 그들을 호위하는 데에 투자합시다."
 TEX_submarine_tactics:0 "잠수함 전술"
-TEX_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect this advantage. So to that end let us focus on the power of Submarines."
+TEX_submarine_tactics_desc:0 "제1차 세계대전 동안 잠수함은 대단히 효율적이었습니다. 미국 해군의 현대화를 위해 이 이점을 결코 무시해서는 안됩니다. 잠수함의 저력을 확보하는 데에 집중합시다."
 TEX_anti_submarine_tactics:0 "대잠 전술"
-TEX_anti_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect to be prepared for their usage. Let us focus on having our navy fight and destroy all submarines that the enemy may use."
+TEX_anti_submarine_tactics_desc:0 "제1차 세계대전 동안 잠수함은 대단히 효율적이었습니다. 미국 해군의 현대화를 위해 이 사실을 결코 무시해서는 안됩니다. 해군을 확충하여 적들의 잠수함들을 모두 침몰시킵시다."
 TEX_expand_annapolis:0 "키웨스트 해군 기지"
-TEX_expand_annapolis_desc:0 "While Annapolis may have served the corrupt regime before us, we should build a new naval base in Key West Florida. Here we will have access to the Caribbean and the Atlantic Ocean to train our navy and make sure that the American navy is the envy of the world."
+TEX_expand_annapolis_desc:0 "아나폴리스가 부패 정권에 협조했기 때문에, 우리는 키 웨스트 플로리다에 새로운 해군 기지를 마련할 필요가 있습니다. 이곳에서 우리는 카리브 해와 대서양으로 나갈 수 있으며, 해군을 훈련시켜 미국 해군이 전세계의 선망을 받게 만들 수 있을 것입니다."
 TEX_marine_corps:0 "해병대"
-TEX_marine_corps_desc:0 "As we work on modernise the military forces we must not neglect the Marine Corps. As one of the most elite branches of the American Armed forces, there are still many patriotic marines whom would glady help make sure that the corps is loyal to the true republic."
+TEX_marine_corps_desc:0 "군대의 현대화를 위해서는 해병대를 잊어서는 안됩니다. 미군의 가장 정예 병력 중 하나인 그들은 여전히 진정한 공화국에 기꺼이 충성할 애국심 깊은 군인들입니다."
 
 ### Focuses - Air Force ###
 TEX_airforce:0 "헌신적인 미 공군"
-TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to [Root.GetLeader] and the true America."
+TEX_airforce_desc:0 "아메리카를 위해 전쟁에 돌입함에 따라, 공군을 편성하여 그들의 마음에 애국심과 [Root.GetLeader]와 진정한 미국을 향한 충성심을 불어넣어야 할 것입니다."
 TEX_air_support:0 "레이미의 항공 지원"
-TEX_air_support_desc:0 "Howard Knox Ramey believes that the best use for the Air Force is to work with the Army. By having the army and the air force work together, victory will be ours."
+TEX_air_support_desc:0 "하워드 녹스 레이미는 공군이 육군과 협동하는 것이 최적의 운용이라 생각했습니다. 육군과 공군이 함께 하는 한 승리는 우리의 것입니다."
 TEX_cas_effort:0 "근접 항공 지원"
-TEX_cas_effort_desc:0 "One of the key focuses for Ramey's plan is to focus on Close Air Support. We need aircraft that can focus on getting close to the enemy and providing tactical assistance to our troops."
-TEX_tatical_bombers:0 "전술폭격기들"
-TEX_tatical_bombers_desc:0 "Another key part of Ramey's plan calls for tactical bombers. By having our bombers destroy the enemy troops we will help ensure that victory is ours. So let us focus on improving our tactical bombers."
+TEX_cas_effort_desc:0 "레이미 계획의 중점 중 하나는 근접 항공 지원에 대한 집중입니다. 우리는 적에게 근접할 항공기와 아군에 대한 전술적 지원이 필요합니다."
+TEX_tatical_bombers:0 "전술 폭격기"
+TEX_tatical_bombers_desc:0 "레이미 계획의 다른 중점은 전술 폭격기입니다. 우리 폭격기가 적군을 붕괴시키면 승리를 보장받을 수 있습니다. 전술 폭격기를 개선시키는 데에 집중합시다."
 TEX_air_supremecy:0 "린드버그의 항공 우세"
-TEX_air_supremecy_desc:0 "Charles Lindbergh believes that the best use for the Air Force is to dominate the skies. Through ruling the skies we will have victory."
+TEX_air_supremecy_desc:0 "찰스 린드버그는 공군이 제공권을 장악케 하는 것이 최적의 운용이라 생각했습니다. 하늘을 지배하는 자가 전장을 지배합니다."
 TEX_fighters:0 "전투기 중점"
-TEX_fighters_desc:0 "To dominate the skies we need fighters and many of the highest qualities fighters that we can produce. To that end let us modernise the air force to make sure that our air force is the envy of the world."
+TEX_fighters_desc:0 "하늘을 지배하기 위해서는 전투기, 얻을 수 있는 최고의 전투기가 필요합니다. 우리의 공군이 전세계의 선망을 받기 위해서는 공군을 현대화해야 합니다."
 TEX_strategic_bombers:0 "전략 폭격기"
-TEX_strategic_bombers_desc:0 "To rule the skies we need to make sure that the enemy can not even take flight to begin with. To that end Lindbergh's plan calls for a focus in strategic bombers in order to achieve just that objective."
+TEX_strategic_bombers_desc:0 "하늘을 얻기 위해서는 적이 항공을 시도조차 할 수 없게 만들어야 합니다. 린드버그의 계획은 이 목적을 달성하기 위해 전략 폭격기에 집중할 것을 요구합니다."
 TEX_found_the_wasp:0 "WASP 창설"
-TEX_found_the_wasp_desc:0 "It has been proposed that we create the Women Airforce Service Pilots or the WASPs. The organisation would help in making sure that we have more men for flying and give women whom are loyal and patriotic to the True America flying experience. This is of course Controversial but we need all the support to bring victory for America."
+TEX_found_the_wasp_desc:0 "우리는 여성 공군 파일럿, WASP를 창설하자는 제안을 받았습니다. 이 조직은 진정한 미국에 충성심이 깊고 애국적인 여성들에게 비행을 교육하여, 비행사를 더 많이 양성할 것입니다. 물론 논쟁이 있는 사안이기는 하지만 미국에 승리를 가져다 주기 위해서는 모든 지원을 끌어내야 합니다."
 TEX_rocketry:0 "애국적인 로켓"
-TEX_rocketry_desc:0 "As we modernise our Air Force many of our scientists are looking into how rocketry and jet technology can be utilised in making our aircraft even better. Let us give them support and see what they can do for America."
+TEX_rocketry_desc:0 "공군 현대화를 위해 우리 과학자들은 로켓과 제트 기술이 항공기 개선에 이용될 수 있음을 밝혀냈습니다. 그들을 지원한 후, 아메리카를 위해 무엇을 할 수 있을지 지켜봅시다."
 
 ### Focuses - Economic ###
 TEX_war_economy:0 "전시 경제"
